fix about me picutre on mobile

--- a/style.scss
+++ b/style.scss
@@ -518,6 +518,12 @@ animation: jump .5s linear alternate
             justify-content: center;
             align-items: center;
         }
+
+        .picture {
+            img {
+                max-width: 100%;
+            }
+        }
     }
 }
 // ======= media end ========
